# simple-utcd

./: .travis.yml  CMakeLists.txt  Jenkinsfile  Makefile  README.md  ROADMAP.md  ROADMAP_CHECKLIST.md
config/examples/security/: README.md  acl.conf  acl.json  acl.yaml  authentication.conf  authentication.json  authentication.yaml  rate-limiting.conf  rate-limiting.json  rate-limiting.yaml
config/examples/simple/: simple-utcd.json  simple-utcd.yaml
config/templates/: development.conf  high-security.conf  production.conf
deployment/: README.md
deployment/examples/docker/: README.md  docker-compose.yml
deployment/launchd/: com.simple-utcd.simple-utcd.plist
deployment/logrotate.d/: {{PROJECT_NAME}}
deployment/systemd/: {{PROJECT_NAME}}.service
deployment/windows/: {{PROJECT_NAME}}.service
docs/: README.md
docs/architecture/: README.md
docs/recovery/: disaster-recovery.md
include/simple_utcd/: acl.hpp  async_io.hpp  auth.hpp  backup_restore.hpp  certificate_acl.hpp  ddos_protection.hpp  error_handler.hpp  graceful_degradation.hpp  health_check.hpp  logger.hpp  metrics.hpp  rate_limiter.hpp  tls_manager.hpp  upstream_manager.hpp  utc_config.hpp  utc_packet.hpp  utc_server.hpp  watchdog.hpp
scripts/: README.md  build-linux.sh  build-macos.sh  build-windows.bat
scripts/recovery/: README.md  auto-recover.sh  manual-recovery.sh
src/: main.cpp
src/core/: acl.cpp  async_io.cpp  auth.cpp  backup_restore.cpp  certificate_acl.cpp  ddos_protection.cpp  error_handler.cpp  graceful_degradation.cpp  health_check.cpp  logger.cpp  metrics.cpp  rate_limiter.cpp  tls_manager.cpp  upstream_manager.cpp  utc_config.cpp  utc_packet.cpp  utc_server.cpp  watchdog.cpp
tests/: CMakeLists.txt  test_acl.cpp  test_async_io.cpp  test_auth.cpp  test_backup_restore.cpp  test_certificate_acl.cpp  test_ddos_protection.cpp  test_graceful_degradation.cpp  test_health_check.cpp  test_logger.cpp  test_main.cpp  test_metrics.cpp  test_rate_limiter.cpp  test_tls_manager.cpp  test_upstream_manager.cpp  test_utc_config.cpp  test_utc_packet.cpp  test_watchdog.cpp
